[gd_scene load_steps=38 format=3 uid="uid://ce3ywxvwpfwmf"]

[ext_resource type="Script" path="res://Level.gd" id="1_h6txy"]
[ext_resource type="PackedScene" uid="uid://djobdn0kpo3iw" path="res://bar_b.tscn" id="1_mv7hs"]
[ext_resource type="Texture2D" uid="uid://cvpdu8e05j4sn" path="res://icon.svg" id="3_mrvp6"]
[ext_resource type="Script" path="res://CharacterBody2D.gd" id="4_54ugp"]
[ext_resource type="Texture2D" uid="uid://c50ivgweqqfor" path="res://assests/Green Drone F1.png" id="6_ithob"]
[ext_resource type="Texture2D" uid="uid://0q6b1re8qmb7" path="res://assests/Green Drone F2.png" id="7_ftw72"]
[ext_resource type="Texture2D" uid="uid://ror3virm5ave" path="res://assests/s1 .png" id="8_bcoma"]
[ext_resource type="Texture2D" uid="uid://h10v34vfnysc" path="res://assests/Cop._Demo.png" id="9_13sgr"]
[ext_resource type="PackedScene" uid="uid://db07m7ctkl7x1" path="res://redDrone.tscn" id="10_lhnsx"]
[ext_resource type="PackedScene" uid="uid://7ue7kdbpu0t3" path="res://blueDrone.tscn" id="14_r1v73"]
[ext_resource type="PackedScene" uid="uid://iepj63r3yt31" path="res://cop.tscn" id="15_xdgsa"]
[ext_resource type="Script" path="res://HP.gd" id="16_y8jng"]
[ext_resource type="Texture2D" uid="uid://dcgkp6rrej3ny" path="res://assests/full.png" id="17_bi7oo"]
[ext_resource type="Texture2D" uid="uid://b7jqjio4ewe7h" path="res://assests/ow1.png" id="18_wvwyg"]
[ext_resource type="Texture2D" uid="uid://cwendh3na5lco" path="res://assests/ow2.png" id="19_nlgot"]
[ext_resource type="Texture2D" uid="uid://evgmcoeekpsa" path="res://assests/door.png" id="19_s7n3p"]
[ext_resource type="PackedScene" uid="uid://cnqsuyouetc2o" path="res://droneB.tscn" id="20_256xk"]
[ext_resource type="Texture2D" uid="uid://c0etm0pbcbkcv" path="res://assests/ow3.png" id="20_fe0k8"]
[ext_resource type="Script" path="res://health.gd" id="21_wn0mh"]
[ext_resource type="PackedScene" uid="uid://dnhrj8gok2sb0" path="res://Project Doll House.tscn" id="23_gx0ag"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2lqf"]
size = Vector2(12579.8, 825.369)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5ues"]
size = Vector2(42.3489, 179.396)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ga1s"]
size = Vector2(12182.2, 2190.08)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dk56p"]
size = Vector2(721.247, 3722.27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1k15u"]
size = Vector2(5991.26, 78.2557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ni10a"]
size = Vector2(1361.76, 78.2557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_60c5w"]
size = Vector2(5536.52, 78.2557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x8tyl"]
size = Vector2(12766.5, 78.2557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfuas"]
size = Vector2(919.28, 78.2557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_renqu"]
size = Vector2(18474.7, 78.2557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cl11q"]
size = Vector2(17.9557, 6.55402)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4abwr"]
size = Vector2(1.02412, 27.9868)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b1q6"]
size = Vector2(1.72108, 32.595)

[sub_resource type="SpriteFrames" id="SpriteFrames_71xnc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ithob")
}, {
"duration": 1.0,
"texture": ExtResource("7_ftw72")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1xew"]
size = Vector2(760.188, 551.799)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhqwo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_bi7oo")
}],
"loop": true,
"name": &"full",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_wvwyg")
}],
"loop": true,
"name": &"ow1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_nlgot")
}],
"loop": true,
"name": &"ow2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_fe0k8")
}],
"loop": true,
"name": &"ow3",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_it2v0"]
size = Vector2(941.281, 1400.1)

[node name="Level 2" type="Node2D"]
script = ExtResource("1_h6txy")

[node name="Level" parent="." instance=ExtResource("23_gx0ag")]
position = Vector2(2021, -791)
scale = Vector2(7.45, 7.45)

[node name="kill box" type="Area2D" parent="Level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/kill box"]
position = Vector2(5409.56, 875.302)
shape = SubResource("RectangleShape2D_s2lqf")

[node name="DroneStop" type="Area2D" parent="Level"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/DroneStop"]
position = Vector2(8510.87, 186.846)
shape = SubResource("RectangleShape2D_y5ues")

[node name="Radio Cop" type="Node2D" parent="Level"]
position = Vector2(631.678, -423.356)
scale = Vector2(0.134228, 0.134228)

[node name="Cop_Demo" type="Sprite2D" parent="Level/Radio Cop"]
position = Vector2(10030, 2091)
scale = Vector2(0.359684, 0.359684)
texture = ExtResource("9_13sgr")

[node name="Icon9" type="Sprite2D" parent="Level/Radio Cop"]
position = Vector2(9878, 2042)
scale = Vector2(0.671861, 1.5625)
texture = ExtResource("3_mrvp6")

[node name="Area2D" type="Area2D" parent="Level/Radio Cop/Icon9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Radio Cop/Icon9/Area2D"]
position = Vector2(-2420.69, 728.959)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_8ga1s")

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Radio Cop"]
position = Vector2(-11147, 608)
collision_mask = 4

[node name="byeTrain" type="CollisionShape2D" parent="Level/Radio Cop/StaticBody2D"]
position = Vector2(3569.99, 2726.01)
shape = SubResource("RectangleShape2D_dk56p")

[node name="Icon10" type="Sprite2D" parent="Level/Radio Cop"]
position = Vector2(2548, -1213)
scale = Vector2(0.109366, 0.781251)
texture = ExtResource("3_mrvp6")

[node name="Radio Cop2" type="Node2D" parent="Level"]
position = Vector2(8042.14, -426.174)
scale = Vector2(0.134228, 0.134228)

[node name="Cop_Demo" type="Sprite2D" parent="Level/Radio Cop2"]
position = Vector2(10030, 2091)
scale = Vector2(0.359684, 0.359684)
texture = ExtResource("9_13sgr")

[node name="Icon9" type="Sprite2D" parent="Level/Radio Cop2"]
position = Vector2(9878, 2042)
scale = Vector2(0.671861, 1.5625)
texture = ExtResource("3_mrvp6")

[node name="Area2D" type="Area2D" parent="Level/Radio Cop2/Icon9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Radio Cop2/Icon9/Area2D"]
position = Vector2(-3921.52, 748.162)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_8ga1s")

[node name="Icon10" type="Sprite2D" parent="Level/Radio Cop2"]
position = Vector2(2548, -1213)
scale = Vector2(0.109366, 0.781251)
texture = ExtResource("3_mrvp6")

[node name="Stuff to delete" type="Node2D" parent="."]

[node name="S1" type="Sprite2D" parent="Stuff to delete"]
position = Vector2(8317.32, -6886.09)
scale = Vector2(11.6896, 11.6896)
texture = ExtResource("8_bcoma")

[node name="shelves" type="Node2D" parent="Stuff to delete/S1"]

[node name="top" type="StaticBody2D" parent="Stuff to delete/S1/shelves"]
position = Vector2(-126.566, -77.526)
scale = Vector2(0.0697933, 0.0697933)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff to delete/S1/shelves/top"]
position = Vector2(-5293.22, 596.092)
shape = SubResource("RectangleShape2D_1k15u")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Stuff to delete/S1/shelves/top"]
position = Vector2(1545.62, 596.092)
shape = SubResource("RectangleShape2D_ni10a")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Stuff to delete/S1/shelves/top"]
position = Vector2(6334.46, 596.092)
shape = SubResource("RectangleShape2D_60c5w")
one_way_collision = true

[node name="mid" type="StaticBody2D" parent="Stuff to delete/S1/shelves"]
position = Vector2(-126.566, -1.8701)
scale = Vector2(0.0697933, 0.0697933)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff to delete/S1/shelves/mid"]
position = Vector2(-1903.92, 583.266)
shape = SubResource("RectangleShape2D_x8tyl")
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Stuff to delete/S1/shelves/mid"]
position = Vector2(8671.27, 583.266)
shape = SubResource("RectangleShape2D_hfuas")
one_way_collision = true

[node name="low" type="StaticBody2D" parent="Stuff to delete/S1/shelves"]
position = Vector2(-126.566, 73.7858)
scale = Vector2(0.0697933, 0.0697933)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stuff to delete/S1/shelves/low"]
position = Vector2(952.588, 610.984)
shape = SubResource("RectangleShape2D_renqu")

[node name="GREEN DRONE" type="CharacterBody2D" parent="."]
position = Vector2(20008, -552)
scale = Vector2(2.83285, 2.83285)
collision_layer = 2
script = ExtResource("4_54ugp")

[node name="Drone" type="CollisionShape2D" parent="GREEN DRONE"]
position = Vector2(-1.30762, 309.759)
rotation = 3.14159
scale = Vector2(56.5286, -26.1218)
shape = SubResource("RectangleShape2D_cl11q")

[node name="Wall1" type="CollisionShape2D" parent="GREEN DRONE"]
position = Vector2(-562.332, -90.545)
rotation = 3.14159
scale = Vector2(56.5286, -26.1218)
shape = SubResource("RectangleShape2D_4abwr")
disabled = true

[node name="Wall2" type="CollisionShape2D" parent="GREEN DRONE"]
position = Vector2(554.562, -26.4751)
rotation = 3.14159
scale = Vector2(56.5286, -26.1218)
shape = SubResource("RectangleShape2D_0b1q6")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="GREEN DRONE"]
position = Vector2(-1.05859, 306.405)
rotation = 0.00117709
scale = Vector2(0.684554, 0.574662)
sprite_frames = SubResource("SpriteFrames_71xnc")
autoplay = "default"
frame_progress = 0.0232401

[node name="Area2D" type="Area2D" parent="GREEN DRONE"]

[node name="Player Detection" type="CollisionShape2D" parent="GREEN DRONE/Area2D"]
position = Vector2(61.333, -99.1932)
shape = SubResource("RectangleShape2D_s1xew")

[node name="spawn" type="Timer" parent="GREEN DRONE"]
wait_time = 2.0
autostart = true

[node name="BarB" parent="." instance=ExtResource("1_mv7hs")]
position = Vector2(18857, -1199)

[node name="Baddies" type="Node2D" parent="."]

[node name="Drones" type="Node2D" parent="Baddies"]

[node name="Red Drones" type="Node2D" parent="Baddies/Drones"]

[node name="redDrone" parent="Baddies/Drones/Red Drones" instance=ExtResource("10_lhnsx")]
position = Vector2(5783, -1115)
range = Vector2(0, 300)

[node name="redDrone2" parent="Baddies/Drones/Red Drones" instance=ExtResource("10_lhnsx")]
position = Vector2(66460, -835)
range = Vector2(0, 400)

[node name="redDrone3" parent="Baddies/Drones/Red Drones" instance=ExtResource("10_lhnsx")]
position = Vector2(67658, -1244)
range = Vector2(0, 400)

[node name="redDrone4" parent="Baddies/Drones/Red Drones" instance=ExtResource("10_lhnsx")]
position = Vector2(68860, -835)
range = Vector2(0, 400)

[node name="redDrone5" parent="Baddies/Drones/Red Drones" instance=ExtResource("10_lhnsx")]
position = Vector2(70058, -1244)
range = Vector2(0, 400)

[node name="redDrone6" parent="Baddies/Drones/Red Drones" instance=ExtResource("10_lhnsx")]
position = Vector2(71260, -835)
range = Vector2(0, 400)

[node name="Blue Drones" type="Node2D" parent="Baddies/Drones"]

[node name="blueDrone2" parent="Baddies/Drones/Blue Drones" instance=ExtResource("14_r1v73")]
position = Vector2(8399, 115)
range = Vector2(550, 0)

[node name="blueDrone4" parent="Baddies/Drones/Blue Drones" instance=ExtResource("14_r1v73")]
position = Vector2(78465, 111)
range = Vector2(1300, 0)

[node name="blueDrone3" parent="Baddies/Drones/Blue Drones" instance=ExtResource("14_r1v73")]
position = Vector2(10290, 115)
range = Vector2(550, 0)

[node name="DroneB" parent="Baddies/Drones" instance=ExtResource("20_256xk")]
position = Vector2(3406, -1488)

[node name="DroneB2" parent="Baddies/Drones" instance=ExtResource("20_256xk")]
position = Vector2(11318, -917)

[node name="DroneB3" parent="Baddies/Drones" instance=ExtResource("20_256xk")]
position = Vector2(77244, -2262)

[node name="DroneB4" parent="Baddies/Drones" instance=ExtResource("20_256xk")]
position = Vector2(75966, -2262)

[node name="DroneB5" parent="Baddies/Drones" instance=ExtResource("20_256xk")]
position = Vector2(83083, -1482)

[node name="cops" type="Node2D" parent="Baddies"]

[node name="cop3" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(5348, 587)
scale = Vector2(2.5, 2.5)

[node name="cop6" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(2913, -1204)
scale = Vector2(2.5, 2.5)

[node name="cop7" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(2913, -317)
scale = Vector2(2.5, 2.5)

[node name="cop2" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(2962, 583)
scale = Vector2(2.5, 2.5)

[node name="cop4" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(8411, -313)
scale = Vector2(2.5, 2.5)

[node name="cop11" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(9178, -1140)
scale = Vector2(2.5, 2.5)

[node name="cop8" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(78472, -319)
scale = Vector2(2.5, 2.5)

[node name="cop9" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(81943, -319)
scale = Vector2(2.5, 2.5)

[node name="cop10" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(83759, -332)
scale = Vector2(2.5, 2.5)

[node name="cop5" parent="Baddies/cops" instance=ExtResource("15_xdgsa")]
position = Vector2(10302, -297)
scale = Vector2(2.5, 2.5)

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(43112.3, -836)
scale = Vector2(331.761, 2.78125)
texture = ExtResource("3_mrvp6")

[node name="Warning" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TrainMoment" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="HP" type="Label" parent="UI"]
visible = false
offset_right = 199.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 81
text = "hehe"
script = ExtResource("16_y8jng")

[node name="health" type="AnimatedSprite2D" parent="UI"]
position = Vector2(1357, -642)
sprite_frames = SubResource("SpriteFrames_mhqwo")
animation = &"full"
script = ExtResource("21_wn0mh")

[node name="Door" type="Sprite2D" parent="."]
position = Vector2(84602, 643)
scale = Vector2(0.422826, 0.422826)
texture = ExtResource("19_s7n3p")

[node name="Area2D" type="Area2D" parent="Door"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door/Area2D"]
position = Vector2(14.1875, 0)
shape = SubResource("RectangleShape2D_it2v0")

[connection signal="body_entered" from="Level/kill box" to="." method="_on_kill_box_body_entered"]
[connection signal="body_exited" from="Level/Radio Cop/Icon9/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Level/Radio Cop/Icon9/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_exited" from="Level/Radio Cop2/Icon9/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_shape_entered" from="Level/Radio Cop2/Icon9/Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="area_shape_entered" from="GREEN DRONE/Area2D" to="GREEN DRONE" method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="GREEN DRONE/Area2D" to="GREEN DRONE" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="GREEN DRONE/spawn" to="GREEN DRONE" method="_on_spawn_timeout"]
[connection signal="timeout" from="Warning" to="." method="_on_warning_timeout"]
[connection signal="timeout" from="TrainMoment" to="." method="_on_train_moment_timeout"]
[connection signal="body_entered" from="Door/Area2D" to="." method="_on_area_2d_body_entered"]
